[package]
name = "docker-command"
version = "1.0.2-alpha.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/docker-command"
license = "Apache-2.0"
description = "Library for creating Docker commands"
readme = "README.md"
keywords = ["command", "run", "docker", "container", "podman"]

[features]
default = ["logging"]
logging = ["command-run/logging", "users/logging"]

[dependencies]
command-run = { version = "1.0", default-features = false }
users = { version = "0.11", default-features = false }
