[package]
name = "docker-command"
version = "1.0.2"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"
repository = "https://github.com/nicholasbishop/docker-command"
license = "Apache-2.0"
description = "Library for creating Docker commands"
readme = "README.md"
keywords = ["command", "run", "docker", "container", "podman"]

[features]
default = ["logging"]
logging = ["command-run/logging", "users/logging"]

[dependencies]
command-run = { version = "1.0.3", default-features = false }
users = { version = "0.11.0", default-features = false }
