[package]
name = "docker-command"
version = "4.0.0"
edition = "2021"
repository = "https://github.com/nicholasbishop/docker-command"
license = "Apache-2.0"
description = "Library for creating Docker commands"
readme = "README.md"
keywords = ["command", "run", "docker", "container", "podman"]

[features]
default = ["logging"]
logging = ["command-run/logging", "users/logging"]

[dependencies]
command-run = { version = "1.1.1", default-features = false }
users = { version = "0.11.0", default-features = false }
